examples/tests/invalid/function_variadic_definition.w
let f = (...args: Array<num>, x:num) => {};
//       ^^^^^^^^^^^^^^^^^^^ Unexpected 'variadic_definition'